@@ -13,6 +13,7 @@ inventory:
 * Set Bios && Hardware from /sys/class/dmi on recent Linux when dmidecode is missing
 * Add BSD batteries support
 * Add UUID to LXD containers under Linux
+* Fix #472: On MacOS, add monitors serial number when available
 
 netdiscovery/netinventory:
 * Bump NetDiscovery task version to 2.6
